--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,9 @@ buildscript {
 
   dependencies {
     classpath rootProject.ext.has('gradleBuildTools') ? rootProject.ext.gradleBuildTools : 'com.android.tools.build:gradle:3.4.0'
+
+    def biometric_version = "1.0.0"
+    implementation "androidx.biomteric:biometric:$biometric_version"
   }
 }
 
